send additional params to login page

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-keycloak-sh",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "description": "React Native module for authentication between a client and the keycloak server.",
   "main": "src/index.js",
   "scripts": {
@@ -21,7 +21,7 @@
     "openid"
   ],
   "author": [
-	"Sharavana"
+	"Sharavana",
     "Maho Murtic",
     "Anton Krekovsky"
   ],
